fix scroll on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,18 +6,7 @@ html,
 body {
     @apply w-full h-full text-gray-100 relative;
     touch-action: manipulation;
-    overscroll-behavior-y: contain;
-    min-height: 100vh;
-    min-height: 100dvh;
-}
-
-.main-class, .my-class-test {
-    min-height: 100vh;
-    min-height: 100dvh;
-}
-
-body {
-    min-height: -webkit-fill-available;
+    overscroll-behavior-y: none;
     min-height: 100dvh;
 }
 
@@ -25,7 +14,6 @@ html {
     scrollbar-width: none;
     overflow-y: scroll;
     -ms-overflow-style: none;
-    height: -webkit-fill-available;
 }
 
 ::-webkit-scrollbar {
